--- a/app.css
+++ b/app.css
@@ -1,28 +1,39 @@
 body {
     background-image: url('background.jpg');
-    margin-top: 30%;
+    margin-top: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
 .container {
     width: 100%;
-    height: auto;
+    min-height: 100vh;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 .key {
     width: 100px;
     height: 100px;
     border: 3px solid black;
+    border-radius: 10%;
     display: inline;
+    text-align: center;
     transition: 0.1s;
 }
 p {
+    margin: 0;
+    margin-top: 20px;
+    margin-left: 40px;
+    margin-bottom: 20px;
     width:fit-content;
-    color: red;
-    font-size: x-large;
+    color: white;
+    font-size: xx-large;
+    padding: 0;
 }
 span {
-    color: yellow;
+    color: orange;
     font-size:medium;
+    letter-spacing: 0.1rem;
 }
 .keypress {
     transform: scale(1.1);
